--- a/src/Styles/traction.css
+++ b/src/Styles/traction.css
@@ -156,6 +156,12 @@ hr {
   color: var(--primary) !important;
 }
 
+.contactstyle{
+  color: white;
+  text-shadow: -1.5px -1.5px 1.5px #333, 1.5px -1.5px 1.5px #333, -1.5px 1.5px 1.5px #333, 1.5px 1.5px 1.5px #333;
+}
+
+
 .traction{
   color:#58521a;
 }
@@ -374,6 +380,14 @@ hr {
   box-shadow: none !important;
 }
 
+/*Noticias*/
+.tarjeta-noticias{
+  border: 5px solid #5a9759;
+  border-radius: 2rem;
+}
+/*Termina Noticias*/
+
+
 /*Active tabs*/
 .active-tab{
   color: red;
@@ -396,6 +410,17 @@ hr {
   padding: 3rem;
 }
 
+/* Calendario */
+.div-calendario{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 3rem;
+}
+
+.calendario-img{
+  width: 90%;
+}
 
 /* Margin */
 .m-6 {
@@ -1333,6 +1358,10 @@ hr {
   border-radius: 0 0 4px 4px;
 }
 
+.hovercontact{
+  color: red;
+}
+
 .accordion-trigger .btn {
   display: block;
   width: 100%;
@@ -2132,6 +2161,7 @@ hr {
   height: unset;
 }
 
+
 /* Navbar */
 .navbar-floating {
   position: absolute;
@@ -2571,11 +2601,14 @@ h2 .texto-fondoclaro{
 
 /*ICONOS*/
 
-.fa-file-signature,.fa-handshake, .fa-hands{
+.fa-file-signature,.fa-handshake, .fa-hands {
   font-size: 4rem;
   color: #5a9759;
 }
 
+.fa-map-marker-alt, .fa-phone-alt, .fa-envelope-open-text{
+  color: #5a9759;
+}
 .fa-credit-card, .fa-shipping-fast{
   margin-right: .5rem;
 }
@@ -2702,15 +2735,98 @@ h2 .texto-fondoclaro{
  
 }
 
-#tels, #email{
+#tels, #email, .ubicacion{
   text-decoration: none;
-  color:#717172;
+  color:black;
 }
 
 #tels:hover, #email:hover{
   text-decoration: none;
-  color:#062345;
+  color: #58521a;
+  font-weight: bold;
 }
+
+/*CONTACT & MAP FORM*/
+@import url(//fonts.googleapis.com/css?family=Montserrat:300,400,500);
+.contact4 {
+  font-family: "Montserrat", sans-serif;
+	color: #8d97ad;
+  font-weight: 300;
+  box-shadow:  8px 8px 8px 8px rgba(123, 206, 120, 0.3); 
+ 
+}
+
+.contact4 h1, .contact4 h2, .contact4 h3, .contact4 h4, .contact4 h5, .contact4 h6 {
+  color: #3e4555;
+}
+
+.contact4 .font-weight-medium {
+	font-weight: 500;
+}
+
+.contact4 .form-control {
+  background: transparent;
+  border: 2px solid #5a9759;
+}
+
+.contact4 .form-control:focus {
+  border-color: darkgreen;
+}
+
+.contact4 input::-webkit-input-placeholder,
+.contact4 textarea::-webkit-input-placeholder {
+  color:  gray;
+}
+
+.contact4 input:-ms-input-placeholder,
+.contact4 textarea:-ms-input-placeholder {
+  color:  gray;
+}
+
+.contact4 input::placeholder,
+.contact4 textarea::placeholder {
+  color: gray;
+}
+
+.contact4 textarea{
+  resize: none;
+}
+
+.contact4 .right-image {
+  position: absolute;
+  right: 2%;
+  bottom: 0;
+  top: 8%;
+}
+
+.contact4 .text-inverse {
+    color: white !important;
+    font-weight: bold;
+}
+
+@media (min-width: 1024px) {
+	.contact4 .contact-box {
+    padding: 80px 105px 80px 0px;
+	}
+}
+
+@media (max-width: 767px) {
+	.contact4 .contact-box {
+    padding-left: 15px;
+    padding-right: 15px;
+	}
+}
+
+@media (max-width: 1023px) {
+	.contact4 .right-image {
+			position: relative;
+			bottom: -95px;
+	}
+}
+
+
+
+
 
 /*Equipo*/
 /* Teams */
