--- a/src/Styles/portalest19.css
+++ b/src/Styles/portalest19.css
@@ -2289,7 +2289,7 @@ h2 .texto-fondoclaro {
   color: #5a9759;
 }
 
-.fa-map-marker-alt, .fa-phone-alt, .fa-envelope-open-text {
+.fa-map-marker-alt, .fa-phone-alt, .fa-envelope-open-text, .fa-youtube {
   color: #5a9759;
 }
 
